    with newer cmake; patch
    upstream_Harmonize-usage-of-HAVE_X11-using-if-and-cmakedefine.patch.
  * Backport upstream commit 0c4974d68804cdaff2efb6317f7853a89d3a3d2b to fix
    build with gpsd 3.20; patch upstream_Fix-build-with-gpsd-3.20.patch.
  * Bump the debhelper compatibility to 12:
    - switch the debhelper build dependency to debhelper-compat 12
    - remove debian/compat

  [ Maximiliano Curia ]
  * Salsa CI automatic initialization by Tuco

 -- Debian/Kubuntu Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sun, 12 Jan 2020 00:38:48 +0100

plasma-workspace (4:5.14.5.1-4) unstable; urgency=medium

  * Team upload.
  * Backport upstream_dont_bind_model_inside_headerItem.patch to avoid infinite
    recursion in Plasma notifications (Closes: #943344).
  * Refresh add_sddm_debian_breeze.patch.

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Wed, 23 Oct 2019 15:45:35 -0300

plasma-workspace (4:5.14.5.1-3) unstable; urgency=medium

  * Team upload.
  * Simplify the dependencies of plasma-workspace-dev:
    - remove kwin-common, and plasma-workspace, which are not needed (it is
      a package only with development libraries)
    - use the sodeps addon instead of the custom dhmk target to get the
      dependencies for all the so symlinks shipped
  * Tighten library dependencies.
  * Install 40-kde-plasma-kf5.conf using plasma-workspace.install, instead of
    copying it manually.
  * Update lintian overrides.

 -- Pino Toscano <pino@debian.org>  Sat, 05 Oct 2019 07:07:33 +0200

plasma-workspace (4:5.14.5.1-2) unstable; urgency=medium

  * Team upload.
  * Bump Standards-Version to 4.4.1, no changes required.
  * Pass -DBUILD_TESTING=OFF to cmake to disable the build of tests, as they
    are not run at build time anyway.
  * Drop the 'testsuite' autopkgtest, as it does not test the installed
    packages
    - drop patch disable_incompatible_tests, no more needed now
  * Remove unused debian/meta stuff.