@@ -215,7 +215,6 @@ Breaks: kde-window-manager (<= 4:5),
         plasma-mediacenter (<< 5.7),
         plasma-systray-legacy,
         plasma-widgets-addons (<< 4:5.14),
-        ${kde-l10n:all},
 Conflicts: kde-workspace, kde-workspace-data, klipper
 Replaces: kde-workspace-bin,
           kde-workspace-data,
@@ -224,7 +223,6 @@ Replaces: kde-workspace-bin,
           klipper,
           plasma-systray-legacy,
           plasma-workspace-data,
-          ${kde-l10n:all},
 Provides: notification-daemon, x-session-manager
 Recommends: kde-cli-tools (>= 4:5.14),
             kio-extras,
