@@ -2,9 +2,6 @@
 
 export DEB_LDFLAGS_MAINT_APPEND := -Wl,--as-needed
 
-l10npkgs_firstversion_ok := 4:4.14.0-2
-include /usr/share/pkg-kde-tools/qt-kde-team/2/l10n-packages.mk
-
 libpkgs_gen_strict_local_shlibs = $(libpkgs_all_packages)
 include /usr/share/pkg-kde-tools/qt-kde-team/2/library-packages.mk
 
@@ -22,5 +19,5 @@ override_dh_fixperms:
 	chmod -x debian/plasma-workspace/etc/xdg/autostart/klipper.desktop
 	dh_fixperms
 
-override_dh_gencontrol: l10npkgs_firstversion_ok libpkgs_gen_strict_local_shlibs
+override_dh_gencontrol: libpkgs_gen_strict_local_shlibs
 	dh_gencontrol
